fix(component-viewer): Loading document... getting wrapped (#912)
- when there is plenty of room, the message is being wrapped due to the width
  of the new parent span that was added in #717

--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/component-viewer/component-viewer.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/component-viewer/component-viewer.scss
@@ -59,7 +59,6 @@ app-component-viewer {
 .docs-component-api,
 .docs-component-overview {
   width: 80%;
-  display: inline-flex;
 
   @media (max-width: $small-breakpoint-width) {
     width: 100%;
